<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="top|center"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="681dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="386dp"

            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="110dp"
                android:layout_height="98dp"
                android:layout_marginStart="266dp"
                android:layout_marginLeft="266dp"
                android:layout_marginTop="82dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/sexo"
                    android:textAlignment="center"
                    android:textColor="#070606"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino"
                    android:textSize="16sp" />
            </RadioGroup>

            <ImageButton
                android:id="@+id/boton_agregar"
                android:layout_width="58dp"
                android:layout_height="60dp"
                android:layout_marginStart="292dp"
                android:layout_marginLeft="292dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/anass"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ape"
                android:layout_width="254dp"
                android:layout_height="54dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="70dp"
                android:background="#F8F8F8"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/introduzca_su_apellido"
                android:inputType="textPersonName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Name1"
                android:layout_width="255dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="20dp"
                android:background="#F8F8F8"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/introduzca_su_nombre"
                android:inputType="textPersonName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_edad"
                android:layout_width="80dp"
                android:layout_height="47dp"
                android:layout_marginStart="178dp"
                android:layout_marginLeft="178dp"
                android:layout_marginTop="124dp"
                android:background="#F8F8F8"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/edad"
                android:inputType="number"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_fecha"
                android:layout_width="174dp"
                android:layout_height="47dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="124dp"
                android:background="#F8F8F8"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/fecha_nacimiento"
                android:inputType="textPersonName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/lista"
            android:layout_width="374dp"
            android:layout_height="410dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="204dp"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>